# tlsswrapper

./: DOCS.txt  LICENSE  README.md  config.sh
cert/: README  ca.crt  ca.key  client.crt  client.key  rootCA.key  rootCA.pem  server.crt  server.key
examples/: README.md  basictls.cxx  nontls.cxx  tlsfunctionflags.cxx  updatetls.cxx
includes/: tlsw.h  tlswclient.h  tlswhelper.h  tlswserver.h
src/: CMakeLists.txt  client.cxx  tlswclient.cxx  tlswhelper.cxx  tlswrapper.cxx  tlswserver.cxx  tslwrapper.cxx
